tests/good/23_recursion.src
# Test: Recursive function
int factorial(int n) {
    if n <= 1 {
        return 1;
    } else {
        return n * factorial(n - 1);
    }
}

void main([string] args) {
    print_int(factorial(5));
}
